src/test/ui/feature-gates/feature-gate-box_syntax.stderr
error[E0658]: box expression syntax is experimental; you can call `Box::new` instead
  --> $DIR/feature-gate-box_syntax.rs:4:13
   |
LL |     let x = box 3;
   |             ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/49733
   = help: add #![feature(box_syntax)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
